@@ -34,6 +34,8 @@ SimGrid (3.4-svn) unstable; urgency=high
     [Bug: if MSG_task_get_sender() is called after sender exit,
      bad things happen]
   * Fix a bug which prevented suspend/resume to work properly
+  * Display the status of simulated processes when receiving SIGINT 
+    This fixes a regression of v3.3. due to the introduction of SIMIX 
      
  SIMIX:
   * Add SIMIX_process_set_name() to change the name of the current
